# proteus

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  test_output.txt
data/proxy_events/: gold.json  spy.json  wti.json
docs/: alphavantage_client.md  backward_smoother.md  benchmark_protocol.md  changepoint_detectors.md  data_pipeline.md  data_service.md  diagnostics.md  duckdb_cache.md  em_estimation.md  emission_model.md  experiment_runner.md  filter_validation.md  fixed_parameter_policy.md  forward_filter.md  gaussian_msm_simulator.md  interactive_cli.md  log_likelihood.md  observation_design.md  online_inference.md  pairwise_posteriors.md  real_data_evaluation.md  reporting_and_export.md  synthetic_to_real_calibration.md
docs/notes_to_be_refined_to_thesis/: 3. Model.md  4. Online Change Point Detection.md
docs/thesis/: chapter4_online_changepoint_detection.md  chapter5_data_and_observation_design.md  chapter5_observations_and_synthetic_calibration.md  chapter6_experiments_and_evaluation.md  chapter6_synthetic_scenario_generation_and_calibration.md  code_to_theory_repository_audit.md  model_chapter_code_to_theory.md
notes/: Verification.md  checklist.md  phase1.md  phase10.md  phase11.md  phase12..md  phase13.md  phase14.md  phase15.md  phase16.md  phase17.md  phase18.md  phase2.md  phase20.md  phase21.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md  sim_to_real_plan.md  sim_to_real_recovery_plan.md
src/: client.rs  commodity.rs  config.rs  main.rs  rate_limiter.rs
src/alphavantage/: client.rs  commodity.rs  (+2 more)
(+76 files in other folders)
