[package]
name = "proteus"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
toml = "1.1.1"
anyhow = "1"
duckdb = { version = "1.10501.0", features = ["bundled", "chrono"] }
inquire = "0.9"
